# iti1121-grading

./: .devcontainer.json  CONTRIBUTING.md  DOMAIN_TESTING_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  STAGE0_SUMMARY.md  docker-compose.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yaml  copilot-setup-steps.yml  pr-build.yaml  release.yaml  version-bump.yaml
docs/: CurrentState.md  DomainLayer.md  ModularArchitecture.md  README.md  RefactoringPlan.md  Stage1_Architecture.md  Usage.md
examples/: demo_grading_strategies.py  demo_student_matchers.py
src/grader/: __init__.py  __main__.py  _grader.py  bulk_grader.py  code_preprocessing.py  common.py  csv_processing.py  file_operations.py  grader.py  grading_service.py  name_matching.py  protocols.py  submission_processing.py  test_runner.py  writer.py
src/grader/application/: __init__.py  protocols.py
src/grader/domain/: __init__.py  models.py  protocols.py  services.py
src/grader/infrastructure/: README.md  __init__.py  filesystem.py  gradebook.py  preprocessor.py  protocols.py  submission_processor.py  test_runner.py
src/grader/infrastructure/adapters/: __init__.py  legacy_filesystem.py  legacy_preprocessor.py  legacy_test_runner.py
test/: metrics.py  test_bulk_grader.py  test_code_preprocessing.py  test_common.py  test_file_operations.py  test_grade_processing.py  test_grading_service.py  test_java_compilation.py  test_writer.py
test/fixtures/: Calculator.java  TestSimple.java  TestUtils.java  grading_list.csv
test/fixtures/submissions/: StudentCode.java
test/integration/: test_bulk_grading.py  test_domain_services.py  test_grading_strategies.py  test_single_grading.py  test_student_matcher_integration.py
test/unit/: test_adapters.py  test_domain_models.py  test_domain_properties.py  test_filesystem.py  test_gradebook.py  test_grader.py  test_grading_strategy_units.py  test_output_parsers.py  test_preprocessor.py  test_student_matchers.py  test_submission_processor.py  test_test_runner.py
