[project]
name = "grader"
version = "0.1.0"
description = "A CLI tool to auto-grade ITI 1121 assignments at the University of Ottawa."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [{ name = "Natalia Maximo", email = "natalia.maximo@uottawa.ca" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "fuzzywuzzy[speedup] (>=0.18.0,<1.0.0)",
    "python-levenshtein (>=0.25.0,<1.0.0)",
    "unidecode (>=1.3.0,<2.0.0)",
    "rich (>=13.0.0,<14.0.0)"
]


[tool.poetry.scripts]
grader = "grader.__main__:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
